Modified simple.html under master for rebase example

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Copyright Nihar Desai 2018 -->
 <head>
-	<title>Simple HTML Page</title>
+	<title>This is the rebase example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
