--- a/simple.html
+++ b/simple.html
@@ -17,7 +17,9 @@
 		<p>
 			Just some content
 		</p>
-		<p>
+		<p> 
+			Trying to see what the graph will look like with two branches and rebase.
+		</p>
 	</main>
 	<footer class="container">
 		<p>&copy; Company 2014</p>
