--- a/simple.html
+++ b/simple.html
@@ -19,7 +19,7 @@
 		</p>
 		<p> 
 			Trying to see what the graph will look like with two branches and rebase.
-			Making some cahnges to play with stash.
+			Making some cahnges to play with stash; Try #2.
 		</p>
 	</main>
 	<footer class="container">
